# explicit

./: README.md  explicit.cabal
src/Explicit/: Usage.hs
test/Explicit/: Example.hs  UsageSpec.hs
