name:                explicit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/elpinal/explicit
license:             MIT
license-file:        LICENSE
author:              El Pin Al
maintainer:          example@example.com
copyright:           2017 El Pin Al
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Explicit.Usage
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite explicit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , explicit
                     , hspec
  other-modules:       Explicit.UsageSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elpinal/explicit
